// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField when a name is not provided should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when a name is provided should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="inputName" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when a placeholder is not provided should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when a placeholder is provided should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Placeholder" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when no props are provided should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the focus event is emitted from the container element should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the input event is emitted from the input should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the text field is disabled should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" disabled="disabled" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the text field is enabled should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the text field is not readonly should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when the text field is readonly should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" readonly="readonly" name="" type="text" class="textfield__input textfield__input--readonly">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when validation errors are not present should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField when validation errors are present should render as expected 1`] = `
<div class="attrs-fix">
  <div class="input textfield-container"><label class="input__label sr-only">
      My Label
    </label>
    <div tabindex="0" class="textfield rounded-lg">
      <!----> <input placeholder="My Label" name="" type="text" class="textfield__input">
    </div>
    <!---->
    <div class="input__errors"><span class="input__error text-error-400">
        My Label is not valid.
      </span></div>
  </div>
</div>
`;
